--- a/lessons/classes/theory.ipynb
+++ b/lessons/classes/theory.ipynb
@@ -220,9 +220,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Attributes and methods of the class:  ['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__len__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'bounce']\n",
+            "Attributes and methods of the instance:  ['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__len__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'bounce', 'color', 'size']\n"
+          ]
+        }
+      ],
       "source": [
         "# Method visualization:\n",
         "\n",
@@ -404,9 +413,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Color:  red\n",
+            "Size:  21\n"
+          ]
+        },
+        {
+          "ename": "TypeError",
+          "evalue": "the value must be a `str` type.",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32mc:\\Users\\alber\\Documents\\GitHub\\introduction-to-collaborative-development\\lessons\\classes\\theory.ipynb Cell 23\u001b[0m in \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/alber/Documents/GitHub/introduction-to-collaborative-development/lessons/classes/theory.ipynb#X31sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mColor: \u001b[39m\u001b[39m\"\u001b[39m, cube\u001b[39m.\u001b[39mcolor)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/alber/Documents/GitHub/introduction-to-collaborative-development/lessons/classes/theory.ipynb#X31sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSize: \u001b[39m\u001b[39m\"\u001b[39m, cube\u001b[39m.\u001b[39m_size)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/alber/Documents/GitHub/introduction-to-collaborative-development/lessons/classes/theory.ipynb#X31sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m cube\u001b[39m.\u001b[39;49mcolor \u001b[39m=\u001b[39m \u001b[39m32\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/alber/Documents/GitHub/introduction-to-collaborative-development/lessons/classes/theory.ipynb#X31sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mColor: \u001b[39m\u001b[39m\"\u001b[39m, cube\u001b[39m.\u001b[39mcolor)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/alber/Documents/GitHub/introduction-to-collaborative-development/lessons/classes/theory.ipynb#X31sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSize: \u001b[39m\u001b[39m\"\u001b[39m, cube\u001b[39m.\u001b[39m_size)\n",
+            "\u001b[1;32mc:\\Users\\alber\\Documents\\GitHub\\introduction-to-collaborative-development\\lessons\\classes\\theory.ipynb Cell 23\u001b[0m in \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/alber/Documents/GitHub/introduction-to-collaborative-development/lessons/classes/theory.ipynb#X31sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m@color\u001b[39m\u001b[39m.\u001b[39msetter\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/alber/Documents/GitHub/introduction-to-collaborative-development/lessons/classes/theory.ipynb#X31sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcolor\u001b[39m(\u001b[39mself\u001b[39m, value):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/alber/Documents/GitHub/introduction-to-collaborative-development/lessons/classes/theory.ipynb#X31sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(value, \u001b[39mstr\u001b[39m):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/alber/Documents/GitHub/introduction-to-collaborative-development/lessons/classes/theory.ipynb#X31sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m       \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mthe value must be a `str` type.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/alber/Documents/GitHub/introduction-to-collaborative-development/lessons/classes/theory.ipynb#X31sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_color \u001b[39m=\u001b[39m value\n",
+            "\u001b[1;31mTypeError\u001b[0m: the value must be a `str` type."
+          ]
+        }
+      ],
       "source": [
         "# Attribute modification:\n",
         "\n",
@@ -436,7 +466,7 @@
         "print(\"Color: \", cube.color)\n",
         "print(\"Size: \", cube._size)\n",
         "\n",
-        "cube.color = \"blue\"\n",
+        "cube.color = 'blue'\n",
         "\n",
         "print(\"Color: \", cube.color)\n",
         "print(\"Size: \", cube._size)"
@@ -594,7 +624,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.1"
+      "version": "3.10.6"
     },
     "vscode": {
       "interpreter": {
